// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Table Default Table 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c1:hover {
  background: #F5F5F5;
}

.c4 {
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  role="table"
>
  <div
    className="c0"
    role="rowgroup"
  >
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        <div
          className="c3 c4"
          role="columnheader"
        >
          <span
            className="c5"
          >
            Header 1
          </span>
        </div>
        <div
          className="c3 c4"
          role="columnheader"
        >
          <span
            className="c5"
          >
            Header 2
          </span>
        </div>
        <div
          className="c3 c4"
          role="columnheader"
        >
          <span
            className="c5"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Table Table Expanded 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: NaNpx NaNpx;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  color: hsl(223.5,100%,40%);
}

.c3:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c3:active {
  color: hsl(223.5,100%,35%);
}

.c3:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c1 {
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c1:hover {
  background: #F5F5F5;
}

<div
  role="table"
>
  <div
    className="c0"
    role="rowgroup"
  >
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c3"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              Expand
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Table Table Header 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c1 {
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c1:hover {
  background: #F5F5F5;
}

.c4 {
  padding-top: 4px;
  padding-bottom: 4px;
}

@media (min-width:760px) {
  .c7 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

<div
  role="table"
>
  <div
    className="c0"
    role="rowgroup"
  >
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        <div
          className="c3 c4"
          role="columnheader"
        >
          <span
            className="c5"
          >
            Table header 1 flex 1
          </span>
        </div>
        <div
          className="c6 c4"
          role="columnheader"
        >
          <span
            className="c5"
          >
            Table header 2 flex 3
          </span>
        </div>
        <div
          className="c3 c4"
          role="columnheader"
        >
          <span
            className="c5"
          >
            Table header 3 no flex
          </span>
        </div>
        <div
          className="c3 c4"
          role="columnheader"
        >
          <span
            className="c7"
          >
            I'm a component
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Table Table With Different Rows 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c1:hover {
  background: #F5F5F5;
}

.c3 {
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c3:hover {
  background: #F5F5F5;
}

<div
  role="table"
>
  <div
    className="c0"
    role="rowgroup"
  >
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
    </div>
    <div
      className="c3"
      role="row"
    >
      <div
        className="c2"
      >
        Border bottom hidden
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        Large
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        Medium
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2"
      >
        Small
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Table Tables With Different Densities 1`] = `
.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c4:hover {
  background: #F5F5F5;
}

.c7 {
  padding-top: 4px;
  padding-bottom: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c2 {
  background-color: white;
  margin-bottom: 20px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3"
      role="rowgroup"
    >
      <div
        className="c4"
        role="row"
      >
        <div
          className="c5"
        >
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 1
            </span>
          </div>
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 2
            </span>
          </div>
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="c1"
  >
    Small
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3"
      role="rowgroup"
    >
      <div
        className="c4"
        role="row"
      >
        <div
          className="c5"
        >
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 1
            </span>
          </div>
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 2
            </span>
          </div>
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="c1"
  >
    Medium
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3"
      role="rowgroup"
    >
      <div
        className="c4"
        role="row"
      >
        <div
          className="c5"
        >
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 1
            </span>
          </div>
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 2
            </span>
          </div>
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="c1"
  >
    Large
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3"
      role="rowgroup"
    >
      <div
        className="c4"
        role="row"
      >
        <div
          className="c5"
        >
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 1
            </span>
          </div>
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 2
            </span>
          </div>
          <div
            className="c6 c7"
            role="columnheader"
          >
            <span
              className="c8"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
